--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     }
     .item:hover{background:#f7f9fc;color:var(--brand)}
 
-    /* ✅ Selección normal en azul (como antes) */
+    /* ✅ Selección normal en azul */
     .item.active{
       background:#e6f2fa;
       color:var(--brand);
@@ -146,7 +146,7 @@
     }
     @keyframes spin{to{transform:rotate(360deg)}}
 
-    /* ✅ Si hay desvíos: marca naranja SOLO el item activo */
+    /* ✅ Si hay desvíos: naranja SOLO el activo */
     #drawer.struggling .item.active{
       background:var(--warnBg) !important;
       color:var(--warnText) !important;
@@ -160,7 +160,7 @@
       font-weight:1000 !important;
     }
 
-    /* ===== MODALES RESPONSIVE ===== */
+    /* ===== MODALES ===== */
     .modalOverlay{
       position:fixed; inset:0;
       background:linear-gradient(180deg, rgba(3,76,168,.55), rgba(0,0,0,.55));
@@ -176,8 +176,17 @@
       padding:22px;
     }
 
+    /* ===== INICIO: grid ===== */
+    .introGrid{
+      display:grid;
+      grid-template-columns:1.1fr .9fr;
+      gap:16px;
+      margin-top:18px;
+    }
+
     @media (max-width:720px){
       body{ overflow:auto; }
+
       .modalOverlay{ padding:0; }
       .modalCard{
         position:fixed;
@@ -186,12 +195,18 @@
         width:100vw;
         height:100vh;
         border-radius:0;
-        padding:18px 16px;
+        padding:18px 14px;
         overflow:auto;
         box-shadow:none;
         border:none;
       }
-      .chip{font-size:12px}
+
+      .introGrid{
+        grid-template-columns:1fr;
+        gap:12px;
+      }
+
+      #taskIntroOverlay .chip{ font-size:12px; }
     }
 
     /* ===== PANEL RESPONSIVE ===== */
@@ -206,18 +221,7 @@
       box-shadow:var(--shadow2);
       background:#fff;
       border:1px solid var(--border);
-    }
-    @media (max-width:720px){
-      #abpanel{
-        top:auto; right:0; left:0; bottom:0;
-        width:100vw; max-width:100vw;
-        border-radius:18px 18px 0 0;
-        padding:12px 12px calc(12px + env(safe-area-inset-bottom));
-        box-shadow:0 -16px 40px rgba(0,0,0,.18);
-      }
-      #drawer{ max-width:100vw; }
-      #drawer{ padding-bottom:92px; }
-      #columns-container{ padding-bottom:92px; }
+      transition:height .18s ease;
     }
 
     .kpiRow{
@@ -232,6 +236,58 @@
       padding:6px 10px; border-radius:999px;
       background:#f8fafc; border:1px solid #e2e8f0;
       font-weight:900;
+    }
+
+    /* Toggle del panel */
+    #abpanel .panelToggle{
+      display:none;
+      border:none;
+      background:#f1f5ff;
+      border:1px solid #d7e4ff;
+      color:#123e8f;
+      font-weight:1000;
+      border-radius:999px;
+      padding:6px 10px;
+      cursor:pointer;
+      -webkit-tap-highlight-color:transparent;
+    }
+
+    @media (max-width:720px){
+      #abpanel{
+        top:auto; right:0; left:0; bottom:0;
+        width:100vw; max-width:100vw;
+        border-radius:18px 18px 0 0;
+        padding:10px 12px calc(10px + env(safe-area-inset-bottom));
+        box-shadow:0 -16px 40px rgba(0,0,0,.18);
+      }
+
+      /* panel compacto por defecto */
+      #abpanel.is-collapsed{
+        height:132px;
+        overflow:hidden;
+      }
+
+      #abpanel .panelToggle{
+        display:inline-flex;
+        align-items:center;
+        gap:6px;
+      }
+
+      #abpanel .btn{
+        padding:11px 12px !important;
+        font-size:14px !important;
+        border-radius:14px !important;
+      }
+
+      #abpanel .kpi{
+        padding:6px 10px;
+        font-size:13px;
+      }
+
+      #drawer{ max-width:100vw; }
+      /* reserva para que no tape el panel */
+      #drawer{ padding-bottom:150px; }
+      #columns-container{ padding-bottom:150px; }
     }
   </style>
 </head>
@@ -257,20 +313,20 @@
 
       <div style="flex:1;">
         <div class="chip">Test de usabilidad del menú web</div>
-        <div style="margin-top:10px;font-weight:1000;font-size:clamp(26px, 3.8vw, 36px);color:#0b1b3a;line-height:1.08;">
+        <div style="margin-top:10px;font-weight:1000;font-size:clamp(28px, 4.2vw, 40px);color:#0b1b3a;line-height:1.06;">
           Test de usabilidad del menú web
         </div>
-        <div style="margin-top:10px;color:#334155;line-height:1.6;font-size:clamp(15px, 2.2vw, 17px);max-width:90ch;">
+        <div style="margin-top:12px;color:#334155;line-height:1.7;font-size:clamp(15px, 2.4vw, 18px);max-width:90ch;">
           Vas a realizar <b>3 tareas</b> de encontrabilidad: encontrar categorías dentro del menú.
           <b>El cronómetro empieza</b> cuando pulses “Comenzar tarea”.
         </div>
       </div>
     </div>
 
-    <div style="display:grid;grid-template-columns:1.1fr .9fr;gap:16px;margin-top:18px;">
+    <div class="introGrid">
       <div style="border:1px solid var(--border);border-radius:18px;padding:16px;background:#fbfcfe;">
         <div style="font-weight:1000;color:#0f172a;font-size:16px;">Qué tienes que hacer</div>
-        <ol style="margin:12px 0 0 20px;color:#334155;line-height:1.8;font-size:clamp(14px, 2.1vw, 16px);">
+        <ol style="margin:12px 0 0 20px;color:#334155;line-height:1.9;font-size:clamp(14px, 2.2vw, 16px);">
           <li>Pulsa <b>Empezar</b>.</li>
           <li>Lee la tarea y pulsa <b>Comenzar tarea</b>.</li>
           <li>Navega hasta la <b>ruta correcta</b>.</li>
@@ -284,7 +340,7 @@
 
       <div style="border:1px solid var(--border);border-radius:18px;padding:16px;background:#fff;">
         <div style="font-weight:1000;color:#0f172a;font-size:16px;">Tareas incluidas</div>
-        <ul id="introTaskList" style="margin:12px 0 0 20px;color:#334155;line-height:1.8;font-size:clamp(14px, 2.1vw, 16px);"></ul>
+        <ul id="introTaskList" style="margin:12px 0 0 20px;color:#334155;line-height:1.9;font-size:clamp(14px, 2.2vw, 16px);"></ul>
       </div>
     </div>
 
@@ -300,7 +356,7 @@
 <div id="nextTaskOverlay" class="modalOverlay" style="z-index:3500;">
   <div class="card modalCard" style="text-align:center; width:min(900px,92vw);">
     <div class="chip">Siguiente tarea</div>
-    <div id="nextTitle" style="margin-top:10px;font-weight:1000;font-size:clamp(18px, 3vw, 22px);color:#0b1b3a;"></div>
+    <div id="nextTitle" style="margin-top:10px;font-weight:1000;font-size:clamp(18px, 3vw, 24px);color:#0b1b3a;"></div>
 
     <div style="margin-top:14px;border:1px solid var(--border);border-radius:18px;padding:16px;background:#fbfcfe; text-align:left;">
       <div id="nextGoal" style="color:#0f172a;font-size:clamp(14px, 2.2vw, 16px);line-height:1.65;"></div>
@@ -337,12 +393,17 @@
 <div id="abpanel" class="card">
   <div style="display:flex;align-items:center;justify-content:space-between;gap:10px;">
     <div style="font-weight:1000;color:var(--brand);font-size:14px;">Test en curso</div>
-    <div id="detourBadge" style="
-      display:none;
-      padding:6px 10px;border-radius:999px;
-      background:var(--warnBg);color:var(--warnText);
-      border:1px solid #ffd79a;font-weight:1000;font-size:12px;">
-      🟠 Con desvíos
+
+    <div style="display:flex;align-items:center;gap:8px;">
+      <button id="btnPanelToggle" class="panelToggle" type="button">▲ Expandir</button>
+
+      <div id="detourBadge" style="
+        display:none;
+        padding:6px 10px;border-radius:999px;
+        background:var(--warnBg);color:var(--warnText);
+        border:1px solid #ffd79a;font-weight:1000;font-size:12px;">
+        🟠 Con desvíos
+      </div>
     </div>
   </div>
 
@@ -408,7 +469,7 @@
   const ICON_MAP = {"aparatologia y equipos":"📁", "ayudas tecnicas para personas mayores":"🧓", "camillas":"🛏️", "cuidado personal y salud":"🧴", "desechables y consumibles":"🧻", "diagnostico":"🩺", "esterilizacion y autoclaves":"🧼", "instrumental":"🧰", "material medico":"📦", "mobiliario":"🪑", "sillas de ruedas":"🦽", "vestuario y seguridad":"🦺"};
   const FEATURED_CATS = [{ name:"Camillas" }, { name:"Sillas de ruedas" }, { name:"Diagnóstico" }, { name:"Mobiliario" }];
 
-  // "version" es el nombre de la variante del test (A/B/FIN). Puedes poner "A" o "B" para comparar.
+  // "version" = variante A/B/FIN
   const VERSION = "FIN";
   const SESSION_ID = (crypto?.randomUUID) ? crypto.randomUUID() : String(Date.now()) + "_" + Math.random().toString(16).slice(2);
 
@@ -538,6 +599,9 @@
     document.getElementById("nextInfo").innerHTML = `<b>Info:</b> ${TASK.info}`;
     document.querySelector("#nextRoute code").textContent = TASK.route.join(" > ");
     document.getElementById("nextTaskOverlay").style.display = "block";
+
+    // ✅ panel en móvil: expandir 2s para leer y luego colapsar
+    autoPeekPanel();
   }
 
   function hideNextTaskScreen(){
@@ -575,6 +639,9 @@
 
     hideNextTaskScreen();
     toggleMenu(true);
+
+    // ✅ al comenzar tarea: mostrar panel 2s y luego colapsar
+    autoPeekPanel();
   }
 
   function hardPause(){
@@ -626,6 +693,9 @@
       `${message}\nRuta: ${routeStr}\nClicks: ${CLICK_COUNT}\nDesvíos: ${DETOURS}`;
     document.getElementById("doneTime").textContent = seconds ? `Tiempo: ${seconds}s` : "";
     document.getElementById("doneOverlay").style.display = "block";
+
+    // ✅ en móvil: colapsar panel mientras sale el popup
+    collapsePanel(true);
   }
 
   function nextTaskFlow(){
@@ -651,7 +721,7 @@
         document.getElementById("finalSubtitle").textContent = "✅ Descarga iniciada. Ya puedes cerrar esta ventana.";
         document.getElementById("finalSpinner").style.display = "none";
       }
-    }, 80);
+    }, 120);
   }
 
   function failTask(){
@@ -955,6 +1025,46 @@
     drawer.style.width = Math.min(count * 330, window.innerWidth * 0.95) + "px";
   }
 
+  // ========= PANEL COLLAPSE =========
+  const panel = document.getElementById("abpanel");
+  const btnPanelToggle = document.getElementById("btnPanelToggle");
+
+  function isMobile(){ return window.matchMedia("(max-width: 720px)").matches; }
+
+  function collapsePanel(on){
+    if (!panel || !btnPanelToggle) return;
+    if (!isMobile()){
+      panel.classList.remove("is-collapsed");
+      btnPanelToggle.textContent = "▼ Contraer";
+      return;
+    }
+    if (on){
+      panel.classList.add("is-collapsed");
+      btnPanelToggle.textContent = "▲ Expandir";
+    } else {
+      panel.classList.remove("is-collapsed");
+      btnPanelToggle.textContent = "▼ Contraer";
+    }
+  }
+
+  function autoPeekPanel(){
+    if(!isMobile()) return;
+    collapsePanel(false);
+    // tras 2s se colapsa
+    clearTimeout(window.__peekT);
+    window.__peekT = setTimeout(()=>collapsePanel(true), 2000);
+  }
+
+  btnPanelToggle.addEventListener("click", () => {
+    const collapsed = panel.classList.contains("is-collapsed");
+    collapsePanel(!collapsed);
+  });
+
+  window.addEventListener("resize", () => {
+    // al cambiar viewport, colapsar por defecto si mobile
+    collapsePanel(isMobile());
+  });
+
   // ========= WIRING =========
   document.getElementById("openBtn").onclick = () => toggleMenu(true);
   document.getElementById("closeBtn").onclick = () => toggleMenu(false);
@@ -964,6 +1074,11 @@
     TEST_STARTED = true;
     document.getElementById("taskIntroOverlay").style.display = "none";
     document.getElementById("abpanel").style.display = "block";
+
+    // ✅ en móvil: arranca colapsado, peek 2s
+    collapsePanel(true);
+    autoPeekPanel();
+
     taskIndex = 0;
     showNextTaskScreen();
   };
@@ -977,6 +1092,7 @@
   // ========= INIT =========
   fillIntroTaskList();
   document.getElementById("taskIntroOverlay").style.display = "block";
+  collapsePanel(true);
   loadAllData();
 </script>
 </body>
