--- a/index.html
+++ b/index.html
@@ -11,16 +11,9 @@
       --border:#e6e8eb;
       --bg:#f4f6f9;
 
-      --okBg:#eaf7ee;
-      --okText:#0a7a3a;
-
       --warnBg:#fff7e6;
       --warnText:#8a4b00;
       --warnBorder:#ffb020;
-
-      --dangerBg:#fdecec;
-      --dangerText:#b42318;
-      --dangerBorder:#ffb4b4;
 
       --shadow:0 24px 60px rgba(0,0,0,.18);
       --shadow2:0 14px 30px rgba(0,0,0,.16);
@@ -184,32 +177,7 @@
       margin-top:18px;
     }
 
-    @media (max-width:720px){
-      body{ overflow:auto; }
-
-      .modalOverlay{ padding:0; }
-      .modalCard{
-        position:fixed;
-        left:0; top:0;
-        transform:none;
-        width:100vw;
-        height:100vh;
-        border-radius:0;
-        padding:18px 14px;
-        overflow:auto;
-        box-shadow:none;
-        border:none;
-      }
-
-      .introGrid{
-        grid-template-columns:1fr;
-        gap:12px;
-      }
-
-      #taskIntroOverlay .chip{ font-size:12px; }
-    }
-
-    /* ===== PANEL RESPONSIVE ===== */
+    /* ===== PANEL ===== */
     #abpanel{
       position:fixed;
       top:12px; right:12px;
@@ -252,7 +220,31 @@
       -webkit-tap-highlight-color:transparent;
     }
 
+    /* ===== MÓVIL ===== */
     @media (max-width:720px){
+      body{ overflow:auto; }
+
+      .modalOverlay{ padding:0; }
+      .modalCard{
+        position:fixed;
+        left:0; top:0;
+        transform:none;
+        width:100vw;
+        height:100vh;
+        border-radius:0;
+        padding:16px 14px;
+        overflow:auto;
+        box-shadow:none;
+        border:none;
+      }
+
+      /* Intro: 1 columna */
+      .introGrid{
+        grid-template-columns:1fr;
+        gap:12px;
+      }
+
+      /* Panel abajo */
       #abpanel{
         top:auto; right:0; left:0; bottom:0;
         width:100vw; max-width:100vw;
@@ -261,7 +253,6 @@
         box-shadow:0 -16px 40px rgba(0,0,0,.18);
       }
 
-      /* panel compacto por defecto */
       #abpanel.is-collapsed{
         height:132px;
         overflow:hidden;
@@ -285,9 +276,45 @@
       }
 
       #drawer{ max-width:100vw; }
-      /* reserva para que no tape el panel */
       #drawer{ padding-bottom:150px; }
       #columns-container{ padding-bottom:150px; }
+    }
+
+    /* ===== Intro: botón siempre visible en móvil (sin tocar PC) ===== */
+    @media (max-width:720px){
+      .introModal{
+        display:flex;
+        flex-direction:column;
+        height:100vh;
+        overflow:hidden;
+        padding:16px 14px;
+      }
+
+      .introModal .introGrid{
+        flex:1;
+        overflow:auto;
+        padding-bottom:110px;
+      }
+
+      .introCta{
+        position:fixed;
+        left:0; right:0;
+        bottom:0;
+        z-index:9999;
+        padding:12px 14px calc(12px + env(safe-area-inset-bottom));
+        background:rgba(244,246,249,.92);
+        backdrop-filter: blur(10px);
+        border-top:1px solid var(--border);
+        display:flex;
+        justify-content:center;
+      }
+
+      .introBtn{
+        width:min(560px, 92vw);
+        font-size:18px;
+        padding:16px 22px;
+        border-radius:18px;
+      }
     }
   </style>
 </head>
@@ -302,7 +329,7 @@
 
 <!-- ===== INICIO ===== -->
 <div id="taskIntroOverlay" class="modalOverlay">
-  <div class="card modalCard">
+  <div class="card modalCard introModal">
     <div style="display:flex;align-items:flex-start;gap:14px;">
       <div style="
         width:52px;height:52px;border-radius:18px;
@@ -344,10 +371,9 @@
       </div>
     </div>
 
-    <div style="display:flex;justify-content:center;margin-top:18px;">
-      <button id="btnIntroStart" class="btn btnPrimary" style="min-width:min(560px,92vw);font-size:18px;padding:18px 24px;border-radius:18px;">
-        Empezar
-      </button>
+    <!-- ✅ CTA sticky en móvil -->
+    <div class="introCta">
+      <button id="btnIntroStart" class="btn btnPrimary introBtn">Empezar</button>
     </div>
   </div>
 </div>
@@ -469,7 +495,6 @@
   const ICON_MAP = {"aparatologia y equipos":"📁", "ayudas tecnicas para personas mayores":"🧓", "camillas":"🛏️", "cuidado personal y salud":"🧴", "desechables y consumibles":"🧻", "diagnostico":"🩺", "esterilizacion y autoclaves":"🧼", "instrumental":"🧰", "material medico":"📦", "mobiliario":"🪑", "sillas de ruedas":"🦽", "vestuario y seguridad":"🦺"};
   const FEATURED_CATS = [{ name:"Camillas" }, { name:"Sillas de ruedas" }, { name:"Diagnóstico" }, { name:"Mobiliario" }];
 
-  // "version" = variante A/B/FIN
   const VERSION = "FIN";
   const SESSION_ID = (crypto?.randomUUID) ? crypto.randomUUID() : String(Date.now()) + "_" + Math.random().toString(16).slice(2);
 
@@ -511,7 +536,6 @@
   let TASK_ACTIVE = false;
 
   let menuTree = [];
-  let bannersData = [];
 
   // ========= HELPERS =========
   const drawer = document.getElementById("drawer");
@@ -576,6 +600,44 @@
       `Último: ${row.event}${row.label ? " → " + row.label : ""} · Desvíos: ${DETOURS}`;
   }
 
+  // ========= PANEL COLLAPSE =========
+  const panel = document.getElementById("abpanel");
+  const btnPanelToggle = document.getElementById("btnPanelToggle");
+
+  function isMobile(){ return window.matchMedia("(max-width: 720px)").matches; }
+
+  function collapsePanel(on){
+    if (!panel || !btnPanelToggle) return;
+    if (!isMobile()){
+      panel.classList.remove("is-collapsed");
+      btnPanelToggle.textContent = "▼ Contraer";
+      return;
+    }
+    if (on){
+      panel.classList.add("is-collapsed");
+      btnPanelToggle.textContent = "▲ Expandir";
+    } else {
+      panel.classList.remove("is-collapsed");
+      btnPanelToggle.textContent = "▼ Contraer";
+    }
+  }
+
+  function autoPeekPanel(){
+    if(!isMobile()) return;
+    collapsePanel(false);
+    clearTimeout(window.__peekT);
+    window.__peekT = setTimeout(()=>collapsePanel(true), 2000);
+  }
+
+  btnPanelToggle.addEventListener("click", () => {
+    const collapsed = panel.classList.contains("is-collapsed");
+    collapsePanel(!collapsed);
+  });
+
+  window.addEventListener("resize", () => {
+    collapsePanel(isMobile());
+  });
+
   // ========= UI FLOW =========
   function fillIntroTaskList(){
     const ul = document.getElementById("introTaskList");
@@ -600,7 +662,6 @@
     document.querySelector("#nextRoute code").textContent = TASK.route.join(" > ");
     document.getElementById("nextTaskOverlay").style.display = "block";
 
-    // ✅ panel en móvil: expandir 2s para leer y luego colapsar
     autoPeekPanel();
   }
 
@@ -639,8 +700,6 @@
 
     hideNextTaskScreen();
     toggleMenu(true);
-
-    // ✅ al comenzar tarea: mostrar panel 2s y luego colapsar
     autoPeekPanel();
   }
 
@@ -694,7 +753,6 @@
     document.getElementById("doneTime").textContent = seconds ? `Tiempo: ${seconds}s` : "";
     document.getElementById("doneOverlay").style.display = "block";
 
-    // ✅ en móvil: colapsar panel mientras sale el popup
     collapsePanel(true);
   }
 
@@ -879,15 +937,7 @@
     row.push(cur); if(row.join("").trim()) rows.push(row);
     return rows;
   }
-  function rowsToObjects(rows){
-    if(!rows.length) return [];
-    const header = rows[0].map(h => h.trim().toLowerCase());
-    return rows.slice(1).map(row => {
-      const obj = {};
-      header.forEach((h, i) => obj[h] = (row[i] || "").trim());
-      return obj;
-    });
-  }
+
   function sortNodes(nodes, level) {
     if (!nodes) return;
     if (level === 0) {
@@ -896,6 +946,7 @@
     } else nodes.sort((a, b) => a.name.localeCompare(b.name));
     nodes.forEach(n => sortNodes(n.children, level + 1));
   }
+
   function buildTree(csv){
     const root = [];
     csv.split(/\r?\n/).forEach(line => {
@@ -918,11 +969,9 @@
     statusEl.style.display="block";
     statusEl.textContent="Cargando...";
     try {
-      const [catRes, banRes] = await Promise.all([fetch(DATA_URL), fetch(BANNERS_URL)]);
+      const catRes = await fetch(DATA_URL);
       const catCsv = await catRes.text();
-      const banCsv = await banRes.text();
       buildTree(catCsv);
-      bannersData = rowsToObjects(parseCSV(banCsv)).reverse();
       statusEl.style.display="none";
       renderRootMenu();
     } catch(e) { statusEl.textContent="Error de carga"; }
@@ -964,7 +1013,6 @@
       li.onclick = () => {
         const wasActive = li.classList.contains("active");
 
-        // tracking navegación
         if (TEST_STARTED && TASK_ACTIVE && !TASK_DONE && !PAUSED) {
           NAV_PATH = NAV_PATH.slice(0, level);
           NAV_PATH[level] = item.name;
@@ -994,7 +1042,6 @@
           }
         }
 
-        // UI abrir/cerrar
         Array.from(ul.children).forEach(l => l.classList.remove("active"));
         if(item.children.length && wasActive) {
           Array.from(container.querySelectorAll(".column")).slice(level+1).forEach(c => c.remove());
@@ -1025,46 +1072,6 @@
     drawer.style.width = Math.min(count * 330, window.innerWidth * 0.95) + "px";
   }
 
-  // ========= PANEL COLLAPSE =========
-  const panel = document.getElementById("abpanel");
-  const btnPanelToggle = document.getElementById("btnPanelToggle");
-
-  function isMobile(){ return window.matchMedia("(max-width: 720px)").matches; }
-
-  function collapsePanel(on){
-    if (!panel || !btnPanelToggle) return;
-    if (!isMobile()){
-      panel.classList.remove("is-collapsed");
-      btnPanelToggle.textContent = "▼ Contraer";
-      return;
-    }
-    if (on){
-      panel.classList.add("is-collapsed");
-      btnPanelToggle.textContent = "▲ Expandir";
-    } else {
-      panel.classList.remove("is-collapsed");
-      btnPanelToggle.textContent = "▼ Contraer";
-    }
-  }
-
-  function autoPeekPanel(){
-    if(!isMobile()) return;
-    collapsePanel(false);
-    // tras 2s se colapsa
-    clearTimeout(window.__peekT);
-    window.__peekT = setTimeout(()=>collapsePanel(true), 2000);
-  }
-
-  btnPanelToggle.addEventListener("click", () => {
-    const collapsed = panel.classList.contains("is-collapsed");
-    collapsePanel(!collapsed);
-  });
-
-  window.addEventListener("resize", () => {
-    // al cambiar viewport, colapsar por defecto si mobile
-    collapsePanel(isMobile());
-  });
-
   // ========= WIRING =========
   document.getElementById("openBtn").onclick = () => toggleMenu(true);
   document.getElementById("closeBtn").onclick = () => toggleMenu(false);
@@ -1075,7 +1082,6 @@
     document.getElementById("taskIntroOverlay").style.display = "none";
     document.getElementById("abpanel").style.display = "block";
 
-    // ✅ en móvil: arranca colapsado, peek 2s
     collapsePanel(true);
     autoPeekPanel();
 
